Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 4.0.0
-
ghx-label-6
Description
parallel-all-tests-nightly failed with:
query_test.test_nested_types.TestNestedTypesNoMtDop.test_tpch_mem_limit_single_node[protocol: beeswax | exec_option:
| table_format: orc/def/block] (from pytest)
Error Message
query_test/test_nested_types.py:159: in test_tpch_mem_limit_single_node new_vector, use_db='tpch_nested' + db_suffix) common/impala_test_suite.py:665: in run_test_case self._verify_exceptions(test_section['CATCH'], str(e), use_db) common/impala_test_suite.py:481: in __verify_exceptions (expected_str, actual_str) E AssertionError: Unexpected exception string. Expected: row_regex: .Memory limit exceeded: Failed to allocate [0-9]+ bytes for collection 'tpch_nested..customer.c_orders.item.o_lineitems'.* E Not found in actual: ImpalaBeeswaxException: Query aborted:Memory limit exceeded: Error occurred on backend a3c3b59bd11e:22000 by fragment c3440dc607fd4a18:25e42cf500000000Memory left in process limit: 8.26 GBMemory left in query limit: -3.94 KBQuery(c3440dc607fd4a18:25e42cf500000000): memory limit exceeded. Limit=20.00 MB Reservation=8.00 MB ReservationLimit=24.00 MB OtherMemory=12.00 MB Total=20.00 MB Peak=20.00 MB Fragment c3440dc607fd4a18:25e42cf500000000: Reservation=8.00 MB OtherMemory=12.00 MB Total=20.00 MB Peak=20.00 MB AGGREGATION_NODE (id=6): Total=24.00 KB Peak=24.00 KB NonGroupingAggregator 0: Total=8.00 KB Peak=8.00 KB Exprs: Total=4.00 KB Peak=4.00 KB SUBPLAN_NODE (id=1): Total=4.81 MB Peak=4.81 MB HDFS_SCAN_NODE (id=0): Reservation=8.00 MB OtherMemory=7.12 MB Total=15.12 MB Peak=15.12 MB NESTED_LOOP_JOIN_NODE (id=5): Total=24.00 KB Peak=24.00 KB Nested Loop Join Builder: Total=8.00 KB Peak=8.00 KB AGGREGATION_NODE (id=4): Total=24.00 KB Peak=24.00 KB NonGroupingAggregator 0: Total=16.00 KB Peak=16.00 KB Exprs: Total=4.00 KB Peak=4.00 KB UNNEST_NODE (id=3): Total=0 Peak=0 SINGULAR_ROW_SRC_NODE (id=2): Total=0 Peak=0 PLAN_ROOT_SINK: Total=0 Peak=0 CodeGen: Total=2.48 KB Peak=351.00 KB
Stacktrace
query_test/test_nested_types.py:159: in test_tpch_mem_limit_single_node
new_vector, use_db='tpch_nested' + db_suffix)
common/impala_test_suite.py:665: in run_test_case
self.__verify_exceptions(test_section['CATCH'], str(e), use_db)
common/impala_test_suite.py:481: in __verify_exceptions
(expected_str, actual_str)
E AssertionError: Unexpected exception string. Expected: row_regex: .Memory limit exceeded: Failed to allocate [0-9]+ bytes for collection 'tpch_nested_..customer.c_orders.item.o_lineitems'.*
E Not found in actual: ImpalaBeeswaxException: Query aborted:Memory limit exceeded: Error occurred on backend a3c3b59bd11e:22000 by fragment c3440dc607fd4a18:25e42cf500000000Memory left in process limit: 8.26 GBMemory left in query limit: -3.94 KBQuery(c3440dc607fd4a18:25e42cf500000000): memory limit exceeded. Limit=20.00 MB Reservation=8.00 MB ReservationLimit=24.00 MB OtherMemory=12.00 MB Total=20.00 MB Peak=20.00 MB Fragment c3440dc607fd4a18:25e42cf500000000: Reservation=8.00 MB OtherMemory=12.00 MB Total=20.00 MB Peak=20.00 MB AGGREGATION_NODE (id=6): Total=24.00 KB Peak=24.00 KB NonGroupingAggregator 0: Total=8.00 KB Peak=8.00 KB Exprs: Total=4.00 KB Peak=4.00 KB SUBPLAN_NODE (id=1): Total=4.81 MB Peak=4.81 MB HDFS_SCAN_NODE (id=0): Reservation=8.00 MB OtherMemory=7.12 MB Total=15.12 MB Peak=15.12 MB NESTED_LOOP_JOIN_NODE (id=5): Total=24.00 KB Peak=24.00 KB Nested Loop Join Builder: Total=8.00 KB Peak=8.00 KB AGGREGATION_NODE (id=4): Total=24.00 KB Peak=24.00 KB NonGroupingAggregator 0: Total=16.00 KB Peak=16.00 KB Exprs: Total=4.00 KB Peak=4.00 KB UNNEST_NODE (id=3): Total=0 Peak=0 SINGULAR_ROW_SRC_NODE (id=2): Total=0 Peak=0 PLAN_ROOT_SINK: Total=0 Peak=0 CodeGen: Total=2.48 KB Peak=351.00 KB
Attachments
Issue Links
- relates to
-
IMPALA-8336 TestNestedTypes.test_tpch_mem_limit_single_node failed on centos6
-
- Resolved
-